<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logistica</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
	<string name="password">Password</string>
	<string name="already_have_an_account_label">Already have an Account? Sign In!</string>
	<string name="register_label">Register</string>
	<string name="log_in_label">Log In</string>
	<string name="dont_have_account_label">Don\'t Have an Account? Register!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

</resources>
