<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="0dp"
   	    android:layout_weight="1"
   	    android:gravity="center"
   	    android:orientation="vertical">
   	    
   	    <TextView
   	     android:id="@+id/error_messages"
   	     android:layout_width="wrap_content"
   	     android:layout_height="wrap_content"
   	     android:layout_gravity="center_horizontal"
   	     android:textColor="@color/red"
   	     android:textAppearance="?android:attr/textAppearanceMedium"/>
   	    
   	    <TextView 
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content"
   	        android:text="@string/username"/>

   	    <EditText 
			android:id="@+id/register_username"
   	    	android:layout_width="match_parent"
   	   	    android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="text" >
   	    	   <requestFocus />	        
		</EditText>
   	    
   	    <TextView
 			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/password" />
   	    
  		<EditText 
			android:id="@+id/register_password"
   	    	android:layout_width="match_parent"
   	   	    android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPassword" />	
  		
   		<Button
			android:id="@+id/sign_up"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="right"
        	android:onClick="register"
        	android:text="@string/register_label" />
    
   	    
   	</LinearLayout>

   	<Button
   	    android:id="@+id/signInButton"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:onClick="showLogin"
   	    android:text="@string/already_have_an_account_label"
   	    android:textSize="17sp" />

</LinearLayout>
